--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
-    "host": "127.0.0.1",
+    "username": "admin",
+    "password": "Dbstlgh9875!",
+    "database": "Board",
+    "host": "express-database.cnqinvvba3rx.ap-northeast-2.rds.amazonaws.com",
     "dialect": "mysql"
   },
   "test": {
